<resources>
    <string name="app_name">ChatApp</string>
    <string name="title_activity_login">Logowanie</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="no_account_question">Nie posiadasz konta? Zarejestruj się</string>
    <string name="register">Rejestracja</string>
    <string name="logout">Wyloguj</string>
    <string name="friends">Znajomi</string>
    <string name="pending">Zaproszenia</string>
    <string name="no_friends">Twoja lista znajomych jest pusta</string>
    <string name="no_search_result">Nie znaleziono wyników</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_conversations">Brak konwersacji</string>
    <string name="conversationsFragmentTitle">Konwersacje</string>
    <string name="friedsFragmentTitle">Znajomi</string>
    <string name="no_messages">Nie znaleziono wiadomości</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="no_friends_requests">Brak zaproszeń</string>
</resources>
