<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.FriendsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="300dp"
            android:layout_height="75dp"
            style="@android:style/Widget.Material.Light.ProgressBar.Small"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|center_vertical"
            />

        <TextView
            android:id="@+id/tx_no_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/no_friends"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tx_no_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/no_search_result"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="gone"
            />
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <SearchView
                    android:id="@+id/search_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:queryHint="Szukaj znajomych"
                    android:iconifiedByDefault="false"
                    android:searchIcon="@null"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/searchRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"/>
                <TextView
                    android:id="@+id/pendingHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layoutDirection="locale"
                    android:textDirection="locale"
                    android:textSize="24sp"
                    android:text="@string/pending"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pendingRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>
                <TextView
                    android:id="@+id/friendsHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layoutDirection="locale"
                    android:textDirection="locale"
                    android:textSize="24sp"
                    android:text="@string/friends"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/friendsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>

            </LinearLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
